# sensor-fusion-lidar-obstacle-detection-devcontainer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
scripts/: clang_format.sh
src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
src/quiz/cluster/: CMakeLists.txt  cluster.cpp  cluster2D.cpp  kdtree.h
src/quiz/playground/: CMakeLists.txt  main.cpp
src/quiz/ransac/: CMakeLists.txt  line_model.cpp  line_model.h  main.cpp  plane_model.cpp  plane_model.h  ransac.h  ransac.hpp  ransac2d.cpp  ransac3d.cpp
src/render/: box.h  car.cpp  car.h  render.cpp  render.h
src/sensors/: lidar.cpp  lidar.h  ray.cpp  ray.h
